[package]
name = "PostsService"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
dotenv = "0.15.0"
serde = "1.0.143"
serde_derive = "1.0.143"
serde_json = "1.0.83"

reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }

rocket = "0.4.4"
rocket_codegen = "0.4.4"
rocket_contrib = "0.4.4"
rocket_cors = "0.5.2"

[dependencies.uuid]
version = "1.1.2"
features = ["v4", "fast-rng", "macro-diagnostics"]
